tests/ui/error-codes/E0767.stderr
error[E0767]: use of unreachable label `'a`
  --> $DIR/E0767.rs:5:26
   |
LL |     'a: loop {
   |     -- unreachable label defined here
...
LL |             loop { break 'a; }
   |                          ^^ unreachable label `'a`
   |
   = note: labels are unreachable through functions, closures, async blocks and modules

error[E0308]: mismatched types
  --> $DIR/E0767.rs:3:9
   |
LL | /         || {
LL | |
LL | |             loop { break 'a; }
LL | |         }
   | |_________^ expected `()`, found closure
   |
   = note: expected unit type `()`
                found closure `{closure@$DIR/E0767.rs:3:9: 3:11}`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0767.
For more information about an error, try `rustc --explain E0308`.
