tests/ui/error-codes/E0767.rs
fn main() {
    'a: loop {
        || {
            //~^ ERROR mismatched types
            loop { break 'a; } //~ ERROR E0767
        }
    }
}
